Revision history for Perl extension aws-lambda

{{$NEXT}}

0.0.29 2021-07-16T11:25:47Z
    - bump Paws 0.44

0.0.28 2021-06-13T15:46:13Z
    - Fix mojibake when the input and the output are utf8 encoded
    - Update WwwCounter v4.0.0 in the examples

0.0.27 2021-05-21T03:58:38Z
    - Perl 5.34.0 is released

0.0.26 2021-05-09T02:54:24Z
    - bump Paws 0.43

0.0.25 2021-03-02T05:32:05Z
    - new region Asia Pacific (Osaka) ap-northeast-3 is available
    - custom registry name https://gallery.ecr.aws/shogo82148/p5-aws-lambda is now available
      - old one https://gallery.ecr.aws/w2s0h5h2/p5-aws-lambda is still alive

0.0.24 2021-01-25T10:18:13Z
    - perl 5.32.1 is released

0.0.23 2021-01-02T02:20:42Z
    - support Container Image format https://aws.amazon.com/jp/blogs/aws/new-for-aws-lambda-container-image-support/

0.0.22 2020-08-15T04:48:07Z
    - Perl 5.32.0 on Amazon Linux 2 is released

0.0.21 2020-06-22T11:24:18Z
    - Nothing changes. I mistook releasing v0.0.20 and v0.0.19

0.0.20 2020-06-21T01:48:12Z
    - Perl 5.32.0 is released

0.0.19 2020-06-19T23:02:01Z
    - add interface for getting layers' information

0.0.18 2020-06-02T19:54:22Z
    - Perl 5.30.3 and 5.28.3 are released

0.0.17 2020-04-28T10:07:10Z
    - new region Europe (Milan) eu-south-1 is available

0.0.16 2020-04-23T00:23:44Z
    - new region Africa (Cape Town) af-south-1 is available

0.0.15 2020-04-17T11:53:53Z
    - fix syntax error of POD

0.0.14 2020-04-11T11:37:43Z
    - AWS::Lambda::PSGI supports API Gateway v2 now

0.0.13 2020-03-15T00:14:09Z
    - perl 5.30.2 is released

0.0.12 2020-03-11T06:42:11Z
    - bump up AWS::XRay to 0.11

0.0.11 2019-11-13T03:04:08Z
    - perl 5.30.1 is released

0.0.10 2019-09-21T20:07:37Z
    - apply perlstrip and podstrip

0.0.9 2019-08-24T07:07:48Z
    - new region Middle East (Bahrain) me-south-1 is available

0.0.8 2019-08-22T00:01:37Z
    - minor fix of typo in the pod

0.0.7 2019-08-21T09:15:30Z
    - support XRay and AWS::XRay is pre-installed